<resources>
    <string name="app_name">BookStore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mobile_number"><b>Mobile Number:</b></string>
    <string name="login">LOGIN</string>
    <string name="password">Password:</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="noAccountText">No Account Yet?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_text">FORGOT PASSWORD</string>
    <string name="edit_hint">Enter Mobile Number</string>
    <string name="forgot_cancel">Cancel</string>
    <string name="forgot_submit">Submit</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signup_text">SIGN UP</string>
    <string name="signup_mobile">Mobile Number</string>
    <string name="signup_confirmPass">Confirm Password:</string>
    <string name="select_location">Select Location:</string>
    <string name="welcome_heading">WELCOME</string>
    <string-array name="location">
        <item>Bangalore</item>
        <item>Mumbai</item>
        <item>Chennai</item>
    </string-array>

</resources>
