<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bookstore.android.com.bookstore.ForgotPassword"
    android:background="@color/back_red">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textColor="@color/text_color"
        android:layout_marginBottom="30dp"
        android:id="@+id/forgot_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color"
        android:hint="@string/edit_hint"
        android:layout_below="@id/forgot_text"
        android:padding="10dp"
        android:id="@+id/edit_pass"
        android:inputType="number"
        android:maxLength="10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/edit_pass" android:orientation="horizontal"
        android:layout_marginTop="30dp" android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_cancel"
            android:background="@color/button_color"
            android:textColor="@color/text_color"
            android:id="@+id/button_cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_submit"
            android:background="@color/button_color"
            android:textColor="@color/text_color"
            android:layout_marginLeft="10dp"/>



    </LinearLayout>

</RelativeLayout>
