<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="bookstore.android.com.bookstore.SignUp" android:background="@color/back_red">

    <TextView
        android:text="@string/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/signUptext"
        android:textStyle="bold"/>

    <LinearLayout  android:layout_width="match_parent"
                   android:layout_below="@id/signUptext"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_marginBottom="7dp"
            android:textStyle="bold|italic"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:inputType="number"
            android:maxLength="10"
            android:padding="8dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_marginBottom="7dp"
            android:textStyle="bold|italic"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:padding="8dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_confirmPass"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_marginBottom="7dp"
            android:textStyle="bold|italic"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:padding="8dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_marginBottom="7dp"
            android:textStyle="bold|italic"></TextView>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:id="@+id/spin"></Spinner>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp" android:orientation="horizontal"
    android:layout_marginLeft="70dp"
    android:layout_marginRight="30dp"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_cancel"
        android:textColor="@color/text_color"
        android:background="@color/button_color"
        android:textStyle="bold"
        android:id="@+id/signup_cancel"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_submit"
        android:textColor="@color/text_color"
        android:background="@color/button_color"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:id="@+id/signup_submit"/>



</LinearLayout>


    </LinearLayout>





</RelativeLayout>
